--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.7
 
 # Mod Properties
-mod_version=0.4.4+1.20.4_fix_recipes
+mod_version=0.4.5+1.20.4
 maven_group=me.huanmeng
 archives_base_name=respawneye
 
