--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ loader_version_range=[2,)
 mod_id=respawneye
 mod_name=RespawnEye
 mod_license=MIT License
-mod_version=1.0.0
+mod_version=0.1.0+1.20.4
 mod_group_id=me.huanmeng.respawneye
 mod_authors=HuanMeng_
 mod_description=RespawnEye, a Mod that focuses on mythical creatures.
