add: added the ultimate bow's recipe

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.21+build.7
 loader_version=0.15.11
 
 # Mod Properties
-mod_version=0.1.1+1.21
+mod_version=0.1.1+1.21_hotfix
 maven_group=me.huanmeng
 archives_base_name=respawneye
 
